--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "webpack --mode=production"
   },
   "devDependencies": {
+    "beam-wasm-client-masternet": "^6.2.12071",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.0",
     "htm": "3.0.4",
