--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "npm.packageManager": "yarn",
     "search.exclude": {
-        "**/html": true
+        "**/html": true,
+        "yarn.lock": true,
+        "package.json": true,
+        
     }
 }
