--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mini-css-extract-plugin": "^2.4.3",
     "vue": "3.0.4",
     "vue-router": "4",
+    "vue3-click-away": "^1.2.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
