--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "htm": "3.0.4",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.3",
-    "vue": "3.0.4",
+    "stylus": "^0.56.0",
+    "stylus-loader": "^6.2.0",
+    "vue": "^3.2.31",
+    "vue-loader": "^17.0.0",
     "vue-router": "4",
-    "vue3-click-away": "^1.2.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
