artwork details, images in vue templates

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "beam-wasm-client-masternet": "^6.2.12071",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.0",
+    "file-loader": "^6.2.0",
     "htm": "3.0.4",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.3",
