--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build": "webpack --mode=production"
   },
   "devDependencies": {
+    "ag-grid-community": "^27.0.1",
+    "ag-grid-vue": "^27.0.0",
+    "ag-grid-vue3": "^27.0.0",
     "beam-wasm-client-masternet": "^6.2.12071",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.0",
@@ -22,7 +25,10 @@
     "stylus": "^0.56.0",
     "stylus-loader": "^6.2.0",
     "vue": "^3.2.31",
+    "vue-class-component": "^8.0.0-rc.1",
+    "vue-datatables-net": "^2.0.0",
     "vue-loader": "^17.0.0",
+    "vue-property-decorator": "^8.0.0",
     "vue-router": "4",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
