Make the button generic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
         "yarn.lock": true,
         "package.json": true,
         
-    }
+    },
+    "cSpell.words": [
+      "muka",
+      "poshla"
+    ]
 }
