--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "html-webpack-plugin": "^5.5.0",
     "install": "^0.13.0",
     "mini-css-extract-plugin": "^2.4.3",
+    "stylelint": "^14.5.3",
+    "stylelint-plugin-stylus": "^0.13.1",
+    "stylelint-processor-html": "^1.0.0",
+    "stylelint-webpack-plugin": "^3.1.1",
     "stylus": "^0.56.0",
     "stylus-loader": "^6.2.0",
     "vue": "^3.2.31",
